# TravelHub

./: .coveragerc  .pylintrc  README.md  pyproject.toml
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md  teht_3_sekvenssikaavio.md  teht_4_sekvenssikaavio.md  test.py
src/: backup.py  index.py  main.py
src/api_format/: hub_format_attractions.py  hub_format_currency.py  hub_format_news.py  hub_format_weather.py
src/data_files/: latest_cur.txt
src/logic/: cur_code_by_a2.txt  home_logic.py  hub_logic.py  latest_cur.txt
src/mainframe/: mainframe.py
src/ot-harjoitustyo/: index.py  varamain.py
src/ot-harjoitustyo/logic/: home_logic.py
src/ot-harjoitustyo/ui/: home_ui.py
src/tests/: home_logic_test.py  hub_logic_test.py  main_test.py
src/ui/: home_ui.py  hub_ui.py
