[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["kodtld <kodu@live.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"
requests = "^2.27.1"
DateTime = "^4.4"
image = "^1.5.33"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
